Pick and save the place image

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
    <application
         android:label="great_places"
         android:icon="@mipmap/ic_launcher">
+        <!-- android:requestLegacyExternalStorage="true" -->
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
