--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   image_picker: ^0.7.4
   path: ^1.8.0
   path_provider: ^2.0.1
+  sqflite: ^2.0.0+3
+  location: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
