--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   path_provider: ^2.0.1
   sqflite: ^2.0.0+3
   location: ^4.1.1
+  flutter_map: ^0.12.0
+  http: ^0.13.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
